[gd_scene load_steps=42 format=3 uid="uid://di1764mxkhlti"]

[ext_resource type="Script" uid="uid://b5oj5gipctqvw" path="res://Scripts/rain.gd" id="1_yepur"]
[ext_resource type="Texture2D" uid="uid://dhg6e85wb1g04" path="res://Images/LCDBoy.png" id="2_n7lvf"]
[ext_resource type="Texture2D" uid="uid://dhmy1h6lhckbh" path="res://Images/RainBackground.png" id="3_pf7gp"]
[ext_resource type="Script" uid="uid://dqrnusd83ehkj" path="res://Scripts/player.gd" id="4_pf7gp"]
[ext_resource type="Texture2D" uid="uid://ccexrvxh0gob3" path="res://Images/WaterPlayer.png" id="5_1coce"]
[ext_resource type="AudioStream" uid="uid://b34uubo4tgkxl" path="res://Sound/miss1.wav" id="6_esu52"]
[ext_resource type="AudioStream" uid="uid://c65c47ychqvx1" path="res://Sound/move1.wav" id="6_mxx1n"]
[ext_resource type="AudioStream" uid="uid://fedj2rmtj73" path="res://Sound/empty1.wav" id="7_fwwhf"]
[ext_resource type="AudioStream" uid="uid://bp0i3xjrcgyfn" path="res://Sound/bucket1.wav" id="8_equc5"]
[ext_resource type="Script" uid="uid://dweb3f74j8gr7" path="res://Scenes/RainStream.gd" id="8_evofg"]
[ext_resource type="AudioStream" uid="uid://djrcgmk6iehpr" path="res://Sound/rain1.wav" id="8_ts53q"]
[ext_resource type="Texture2D" uid="uid://bbd2yuxw3qmso" path="res://Images/lives.png" id="9_1coce"]
[ext_resource type="PackedScene" uid="uid://76q5dj0ihias" path="res://Scenes/rain_drop.tscn" id="9_ts53q"]
[ext_resource type="AudioStream" uid="uid://d4dihtb1afw2s" path="res://Sound/rain2.wav" id="9_uol4s"]
[ext_resource type="FontFile" uid="uid://8cgssymq7s7h" path="res://Fonts/Seven Segment.ttf" id="10_evofg"]
[ext_resource type="AudioStream" uid="uid://oallcuur48nr" path="res://Sound/rain3.wav" id="10_uol4s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5k3ys"]
atlas = ExtResource("5_1coce")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fqrn"]
atlas = ExtResource("5_1coce")
region = Rect2(24, 72, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_h47sb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k3ys")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fqrn")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_j2m1g"]
atlas = ExtResource("5_1coce")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_quvyc"]
atlas = ExtResource("5_1coce")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fee55"]
atlas = ExtResource("5_1coce")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mfbk"]
atlas = ExtResource("5_1coce")
region = Rect2(96, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_axs6p"]
atlas = ExtResource("5_1coce")
region = Rect2(0, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_suyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2m1g")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_quvyc")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fee55")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mfbk")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axs6p")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h47sb"]
atlas = ExtResource("5_1coce")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_edppr"]
atlas = ExtResource("5_1coce")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_suyoq"]
atlas = ExtResource("5_1coce")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkd8b"]
atlas = ExtResource("5_1coce")
region = Rect2(96, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4ivx"]
atlas = ExtResource("5_1coce")
region = Rect2(0, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ttyd0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h47sb")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_edppr")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suyoq")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkd8b")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4ivx")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ra1bg"]
atlas = ExtResource("5_1coce")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe6c3"]
atlas = ExtResource("5_1coce")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl0j1"]
atlas = ExtResource("5_1coce")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4860"]
atlas = ExtResource("5_1coce")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q5kk"]
atlas = ExtResource("5_1coce")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7mwhx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra1bg")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe6c3")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl0j1")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4860")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q5kk")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_evofg"]
atlas = ExtResource("9_1coce")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts53q"]
atlas = ExtResource("9_1coce")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_uol4s"]
atlas = ExtResource("9_1coce")
region = Rect2(24, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_mxx1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evofg")
}],
"loop": true,
"name": &"life",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts53q")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uol4s")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[node name="Rain" type="Node2D"]
script = ExtResource("1_yepur")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(200, 112.5)
texture = ExtResource("2_n7lvf")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(200, 112)
texture = ExtResource("3_pf7gp")

[node name="WaterPlayer" type="Node2D" parent="."]
script = ExtResource("4_pf7gp")

[node name="Dump" type="AnimatedSprite2D" parent="WaterPlayer"]
position = Vector2(124, 148)
sprite_frames = SubResource("SpriteFrames_h47sb")
animation = &"on"

[node name="Right" type="AnimatedSprite2D" parent="WaterPlayer"]
position = Vector2(268, 148)
sprite_frames = SubResource("SpriteFrames_suyoq")
animation = &"3"

[node name="Middle" type="AnimatedSprite2D" parent="WaterPlayer"]
position = Vector2(220, 148)
sprite_frames = SubResource("SpriteFrames_ttyd0")
animation = &"3"

[node name="Left" type="AnimatedSprite2D" parent="WaterPlayer"]
position = Vector2(172, 148)
sprite_frames = SubResource("SpriteFrames_7mwhx")
animation = &"3"

[node name="Miss" type="AudioStreamPlayer2D" parent="WaterPlayer"]
position = Vector2(172, 148)
stream = ExtResource("6_esu52")
volume_db = 0.5

[node name="Move" type="AudioStreamPlayer2D" parent="WaterPlayer"]
stream = ExtResource("6_mxx1n")

[node name="Bucket" type="AudioStreamPlayer2D" parent="WaterPlayer"]
stream = ExtResource("8_equc5")
volume_db = 1.0

[node name="Empty" type="AudioStreamPlayer2D" parent="WaterPlayer"]
stream = ExtResource("7_fwwhf")
volume_db = -5.0

[node name="RainStreamLeft" type="Node2D" parent="."]
script = ExtResource("8_evofg")

[node name="top" parent="RainStreamLeft" instance=ExtResource("9_ts53q")]
position = Vector2(176, 104)

[node name="middle" parent="RainStreamLeft" instance=ExtResource("9_ts53q")]
position = Vector2(168, 116)

[node name="bottom" parent="RainStreamLeft" instance=ExtResource("9_ts53q")]
position = Vector2(167, 134)

[node name="Timer" type="Timer" parent="RainStreamLeft"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="RainStreamLeft"]
stream = ExtResource("8_ts53q")

[node name="RainStreamMiddle" type="Node2D" parent="."]
position = Vector2(256, 48)
script = ExtResource("8_evofg")

[node name="top" parent="RainStreamMiddle" instance=ExtResource("9_ts53q")]
position = Vector2(-40, 51)

[node name="middle" parent="RainStreamMiddle" instance=ExtResource("9_ts53q")]
position = Vector2(-32, 68)

[node name="bottom" parent="RainStreamMiddle" instance=ExtResource("9_ts53q")]
position = Vector2(-30, 86)

[node name="Timer" type="Timer" parent="RainStreamMiddle"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="RainStreamMiddle"]
stream = ExtResource("9_uol4s")

[node name="RainStreamRight" type="Node2D" parent="."]
script = ExtResource("8_evofg")

[node name="top" parent="RainStreamRight" instance=ExtResource("9_ts53q")]
position = Vector2(256, 100)

[node name="middle" parent="RainStreamRight" instance=ExtResource("9_ts53q")]
position = Vector2(261, 117)

[node name="bottom" parent="RainStreamRight" instance=ExtResource("9_ts53q")]
position = Vector2(263, 134)

[node name="Timer" type="Timer" parent="RainStreamRight"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="RainStreamRight"]
stream = ExtResource("10_uol4s")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.4

[node name="PlayDemo" type="Label" parent="."]
offset_left = 96.0
offset_top = 48.0
offset_right = 143.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0.180392, 0.172549, 0.231373, 1)
theme_override_fonts/font = ExtResource("10_evofg")
theme_override_font_sizes/font_size = 12
text = "Demo"

[node name="Score" type="Label" parent="."]
texture_filter = 1
offset_left = 280.0
offset_top = 48.0
offset_right = 305.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0.180392, 0.172549, 0.231373, 1)
theme_override_fonts/font = ExtResource("10_evofg")
theme_override_font_sizes/font_size = 12
text = "0000"
justification_flags = 131

[node name="Life1" type="AnimatedSprite2D" parent="."]
position = Vector2(184, 56)
sprite_frames = SubResource("SpriteFrames_mxx1n")
animation = &"on"

[node name="Life2" type="AnimatedSprite2D" parent="."]
position = Vector2(200, 56)
sprite_frames = SubResource("SpriteFrames_mxx1n")
animation = &"on"

[node name="Life3" type="AnimatedSprite2D" parent="."]
position = Vector2(216, 56)
sprite_frames = SubResource("SpriteFrames_mxx1n")
animation = &"on"

[node name="RightBtn" type="TextureButton" parent="."]
offset_left = 336.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 176.0

[node name="LeftBtn" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 128.0
offset_right = 64.0
offset_bottom = 176.0

[node name="ResetBtn" type="TextureButton" parent="."]
offset_left = 160.0
offset_top = 192.0
offset_right = 192.0
offset_bottom = 216.0

[node name="StartBtn" type="TextureButton" parent="."]
offset_left = 208.0
offset_top = 192.0
offset_right = 240.0
offset_bottom = 216.0

[connection signal="getPoints" from="WaterPlayer" to="." method="_on_water_player_get_points"]
[connection signal="loseLife" from="WaterPlayer" to="." method="_on_water_player_lose_life"]
[connection signal="dropDone" from="RainStreamLeft" to="WaterPlayer" method="_on_rain_stream_left_drop_done"]
[connection signal="timeout" from="RainStreamLeft/Timer" to="RainStreamLeft" method="_on_timer_timeout"]
[connection signal="dropDone" from="RainStreamMiddle" to="WaterPlayer" method="_on_rain_stream_middle_drop_done"]
[connection signal="timeout" from="RainStreamMiddle/Timer" to="RainStreamMiddle" method="_on_timer_timeout"]
[connection signal="dropDone" from="RainStreamRight" to="WaterPlayer" method="_on_rain_stream_right_drop_done"]
[connection signal="timeout" from="RainStreamRight/Timer" to="RainStreamRight" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="RightBtn" to="WaterPlayer" method="_on_right_btn_button_down"]
[connection signal="button_down" from="LeftBtn" to="WaterPlayer" method="_on_left_btn_button_down"]
[connection signal="button_down" from="ResetBtn" to="." method="_on_reset_btn_button_down"]
[connection signal="button_down" from="StartBtn" to="." method="_on_start_btn_button_down"]
